--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1"
   },
